--- a/MyLmsMvc/Views/Books/Index.cshtml
+++ b/MyLmsMvc/Views/Books/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Books</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -12,7 +12,7 @@
 <table class="table">
     <thead>
         <tr>
-            <th>
+            <th style="mb-10">
                 @Html.DisplayNameFor(model => model.Title)
             </th>
             <th>
