Search functionality is added to each page

--- a/MyLmsMvc/Views/Borrowings/Index.cshtml
+++ b/MyLmsMvc/Views/Borrowings/Index.cshtml
@@ -7,6 +7,9 @@
 <h1>Borrowings</h1>
 
 <p>
+    <a asp-action="ShowSearchForm">Search</a>
+</p>
+<p>
     <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
