--- a/MyLmsMvc/Views/Readers/Index.cshtml
+++ b/MyLmsMvc/Views/Readers/Index.cshtml
@@ -5,7 +5,9 @@
 }
 
 <h1>Readers</h1>
-
+<p>
+    <a asp-action="ShowSearchForm">Search</a>
+</p>
 <p>
     <a asp-action="Create">Create New</a>
 </p>
